--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">系统信息</string>
     <string name="info_not_available">信息不可用</string>
@@ -63,10 +63,13 @@
     <string name="pid_filter">PID 过滤</string>
     <string name="none">无</string>
     <string name="no_log_info">没有日志项.</string>
+    <string name="collector_head">\#Created by %1$s version %2$s\n\n</string>
     <string name="storage_summary">总计: %1$s, 可用: %2$s</string>
     <string name="view_logs">查看日志</string>
     <string name="send_log">发送日志</string>
     <string name="plain_text">纯文本</string>
+    <string name="csv">CSV</string>
+    <string name="html">HTML</string>
     <string name="copy_text">复制文本</string>
     <string name="tab_netstat">网络状态</string>
     <string name="update_speed">更新速率</string>
@@ -118,6 +121,7 @@
     <string name="size_warning">您正在发送超长文本内容, 建议选择压缩包方式发送以避免内存问题.\n\n您想要以压缩包方式发送内容么?</string>
     <string name="idle_info">, 空闲: %s</string>
     <string name="sensors">传感器</string>
+    <string name="gps">GPS</string>
     <string name="batt_plugged">是否插电:</string>
     <string name="unplugged">未插电</string>
     <string name="batt_temp">温度:</string>
@@ -308,6 +312,10 @@
     <string name="total">总计:</string>
     <string name="version_code">版本代码</string>
     <string name="threshold">阈值:</string>
+    <string name="main">Main</string>
+    <string name="radio">Radio</string>
+    <string name="events">Events</string>
+    <string name="ring_buffer">Ring Buffer</string>
     <string name="battery_history">电池历史</string>
     <string name="power_usage">电力使用</string>
     <string name="usage_stats">使用统计</string>
@@ -386,6 +394,7 @@
     <string name="scanner_absent">请先安装条码扫描器应用程序.</string>
     <string name="scan">扫描</string>
     <string name="hardware">硬件</string>
+    <string name="bootloader">Bootloader</string>
     <string name="vendor">厂商</string>
     <string name="renderer">渲染器</string>
     <string name="extensions">扩展</string>
@@ -404,6 +413,7 @@
     <string name="max_cube_map_tex_size">最大立方映射材质尺寸</string>
     <string name="max_render_buf_size">最大渲染缓冲尺寸</string>
     <string name="kernel">内核</string>
+    <string name="user_agent">User-Agent</string>
     <string name="scale_density">字体缩放比例</string>
     <string name="density_dpi">密度 DPI</string>
     <string name="medium">中</string>
